# esp32-s3-wifi-cam-face-recognition

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults.esp32s3
main/: CMakeLists.txt  camera_pins.h  face_recognition.cpp  face_recognition.h  idf_component.yml  main.cpp
